syntax = "proto3";

package protodb.test;

message ScalarSchema {
  uint64 _id = 1;

  double double_field = 2;
  float float_field = 3;

  int32 int32_field = 4;
  int64 int64_field = 5;

  uint32 uint32_field = 6;
  uint64 uint64_field = 7;

  sint32 sint32_field = 8;
  sint64 sint64_field = 9;

  fixed32 fixed32_field = 10;
  fixed64 fixed64_field = 11;

  sfixed32 sfixed32_field = 12;
  sfixed64 sfixed64_field = 13;

  bool bool_field = 14;

  string string_field = 15;
  bytes bytes_field = 16;
}

message RepeatedScalarSchema {
  uint64 _id = 1;

  repeated double repeated_double_field = 2;
  repeated float repeated_float_field = 3;

  repeated int32 repeated_int32_field = 4;
  repeated int64 repeated_int64_field = 5;

  repeated uint32 repeated_uint32_field = 6;
  repeated uint64 repeated_uint64_field = 7;

  repeated sint32 repeated_sint32_field = 8;
  repeated sint64 repeated_sint64_field = 9;

  repeated fixed32 repeated_fixed32_field = 10;
  repeated fixed64 repeated_fixed64_field = 11;

  repeated sfixed32 repeated_sfixed32_field = 12;
  repeated sfixed64 repeated_sfixed64_field = 13;

  repeated bool repeated_bool_field = 14;

  repeated string repeated_string_field = 15;
  repeated bytes repeated_bytes_field = 16;
}
